// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`public API > srd-rules-engine 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DamageRiderSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FeatGrantSchema",
  "FeatSchema",
  "GearSchema",
  "GrantsSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "NO_CONDITION_ROLLS",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SPELL_SCHOOLS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellDefSchema",
  "SpellMechanicsSchema",
  "SpellSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "abilityModifier",
  "abilityScore",
  "adjustDamage",
  "answers",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "attackMode",
  "attackRoll",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "castSpellAttack",
  "castSpellDamage",
  "castSpellSave",
  "catalogItem",
  "characterLevel",
  "choiceIssues",
  "choiceStep",
  "classLevelKey",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combineModes",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "damageRoll",
  "definedEntries",
  "encounterCombatant",
  "entityName",
  "evaluate",
  "expandConditions",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "formatModifier",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "lookup",
  "makeAttack",
  "mathRng",
  "mergeGrants",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "replaceErrors",
  "reportErrors",
  "resolve",
  "resolveAttack",
  "resolveMode",
  "resolveSpellAttack",
  "resolveSpellSave",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "signed",
  "skillName",
  "spellAttackBonus",
  "spellSaveDc",
  "srdCatalog",
  "srdPack",
  "stat",
  "takeDamage",
  "titleCase",
  "unassignedValues",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;

exports[`public API > srd-rules-engine/http 1`] = `
[
  "createHandler",
]
`;

exports[`public API > srd-rules-engine/node 1`] = `
[
  "ABILITIES",
  "ABILITY_FULL_NAMES",
  "ABILITY_METHODS",
  "ABILITY_NAMES",
  "ADVANTAGE_TARGETS",
  "ALIGNMENTS",
  "ALIGNMENT_NAMES",
  "AbilityBonusSchema",
  "AbilityFullNameSchema",
  "AbilityScoresSchema",
  "AcCalculationSchema",
  "ArmorSchema",
  "BackgroundSchema",
  "BuildError",
  "CHARACTER_CLASSES",
  "CHOICE_KINDS",
  "CURRENCIES",
  "CharacterBuildSchema",
  "CharacterSchema",
  "CharacterStateSchema",
  "ChoiceDefSchema",
  "ChoiceOptionSchema",
  "ClassSchema",
  "ConditionSchema",
  "ContentError",
  "CreationSchema",
  "DAMAGE_TYPES",
  "DEFAULT_SCORE",
  "DEFAULT_SOURCE",
  "DamageRiderSchema",
  "ECONOMY",
  "EFFECT_CONDITIONS",
  "EFFECT_OPS",
  "EFFECT_TARGETS",
  "EffectEndSchema",
  "EffectSchema",
  "EncounterActionSchema",
  "EncounterCombatantSchema",
  "EncounterEffectSchema",
  "EncounterError",
  "EncounterSchema",
  "FeatGrantSchema",
  "FeatSchema",
  "GearSchema",
  "GrantsSchema",
  "ItemGrantSchema",
  "ItemInstanceSchema",
  "LanguageSchema",
  "LevelUpSchema",
  "MAGIC_ITEM_CATEGORIES",
  "MAX_ATTUNED",
  "MAX_DICE",
  "MAX_SIDES",
  "MagicItemSchema",
  "MasterySchema",
  "MonsterActionSchema",
  "MonsterSchema",
  "NO_CONDITION_ROLLS",
  "PATCH_OPS",
  "PackManifestSchema",
  "PatchError",
  "PatchSchema",
  "PlayActionSchema",
  "PlayError",
  "PointBuySchema",
  "PrerequisiteSchema",
  "ROLL_MODES",
  "Resolution",
  "ResourceSchema",
  "SEVERITIES",
  "SIZES",
  "SKILLS",
  "SKILL_ABILITY",
  "SPELL_AREAS",
  "SPELL_SCHOOLS",
  "SRD_PACK_ID",
  "STEPS",
  "STEP_TITLES",
  "SpeciesSchema",
  "SpellDefSchema",
  "SpellMechanicsSchema",
  "SpellSchema",
  "SpellcastingSchema",
  "SubclassSchema",
  "TABLE_NAMES",
  "TABLE_SCHEMAS",
  "ToolSchema",
  "TraitSchema",
  "WeaponSchema",
  "abilityModifier",
  "abilityScore",
  "adjustDamage",
  "answers",
  "applyAction",
  "applyDamage",
  "applyEncounterAction",
  "applyHealing",
  "applyPatch",
  "attackMode",
  "attackRoll",
  "backgroundBonusErrors",
  "baseScoreErrors",
  "builder",
  "cantripTier",
  "castSpell",
  "castSpellAttack",
  "castSpellDamage",
  "castSpellSave",
  "catalogItem",
  "characterLevel",
  "choiceIssues",
  "choiceStep",
  "classLevelKey",
  "combatantFromCharacter",
  "combatantFromMonster",
  "combatantFromSnapshot",
  "combineModes",
  "computePlaySheet",
  "computeSheet",
  "conditionRolls",
  "createBuild",
  "createCatalog",
  "createEncounter",
  "createState",
  "currentCombatant",
  "damageRoll",
  "definedEntries",
  "encounterCombatant",
  "entityName",
  "evaluate",
  "expandConditions",
  "explainStat",
  "finalScores",
  "fixedRng",
  "formatDamage",
  "formatDiceExpression",
  "formatModifier",
  "isAlive",
  "isSkill",
  "issuesForLevel",
  "issuesForStep",
  "loadCatalog",
  "loadContentPack",
  "lookup",
  "makeAttack",
  "mathRng",
  "mergeGrants",
  "multiclassBlockers",
  "parseBuild",
  "parseDiceExpression",
  "parseEncounter",
  "parseState",
  "passivePerception",
  "pointBuyCost",
  "pointBuyStatus",
  "proficiencyBonus",
  "reconcileState",
  "replaceErrors",
  "reportErrors",
  "resolve",
  "resolveAttack",
  "resolveMode",
  "resolveSpellAttack",
  "resolveSpellSave",
  "roll",
  "rollAbilityCheck",
  "rollAbilityScore",
  "rollAbilityScores",
  "rollD20",
  "rollDamage",
  "rollSavingThrow",
  "savingThrow",
  "scriptedRng",
  "seededRng",
  "serveNode",
  "signed",
  "skillName",
  "spellAttackBonus",
  "spellSaveDc",
  "srdCatalog",
  "srdPack",
  "stat",
  "takeDamage",
  "titleCase",
  "unassignedValues",
  "updateBuild",
  "useSaveAction",
  "validateBuild",
  "validateReferences",
  "validateState",
]
`;
